<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_forgot_password_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pika_signin_bg"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".authentication.ForgotPasswordActivity">

        <ProgressBar
            android:id="@+id/forgot_password_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintBottom_toTopOf="@+id/login_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/forgot_password_email_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_guideline">

            <AutoCompleteTextView
                android:id="@+id/forgot_password_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_forgot_password_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_forgot_pwd_short"
                android:imeOptions="actionUnspecified"
                android:textColor="@color/color_white"
                app:backgroundTint="@color/color_white" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/ok_button"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login_bg"
            android:onClick="onClickForgotpwdOk"
            android:text="@string/action_ok"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_email_til"
            app:layout_constraintVertical_bias="0.306" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp"
            android:background="@drawable/btn_login_bg"
            android:onClick="onClickForgotPwdCancel"
            android:text="@string/action_cancel"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ok_button"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_email_til"
            app:layout_constraintVertical_bias="0.306" />

        <android.support.constraint.Guideline
            android:id="@+id/login_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />


    </android.support.constraint.ConstraintLayout>

</layout>